Fix wrong color change

--- a/web/less/frontend/modules/mycq.less
+++ b/web/less/frontend/modules/mycq.less
@@ -91,7 +91,7 @@
 		margin-top: 0;
 		padding: 20px 0;
 		border-top: none;
-		background-color: #fff;
+		background-color: @lightBlue !important;
 	}
 }
 
